--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -59,7 +59,7 @@
 
     <p class="instructions">
       <iframe 
-        src="conti-guide.pdf"
+        src="../conti-guide.pdf"
         width="100%" 
         height="600px"
         style="border: none;">
