--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -55,7 +55,7 @@
       <small>(Tap to copy)</small>
     </div>
 
-    <a class="button" href="https://engage360training.com" target="_blank">Launch Training</a>
+    <a class="role-button" href="https://engage360training.com" target="_blank">Launch Training</a>
 
     <p class="instructions">
       <iframe 
