--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -55,8 +55,10 @@
       <small>(Tap to copy)</small>
     </div>
 
-    <a class="role-button" href="https://engage360training.com" target="_blank">Launch Training</a>
-
+  <div class="role-button">    
+    <a class="button" href="https://engage360training.com" target="_blank">Launch Training</a>
+  </div>
+      
     <p class="instructions">
       <iframe 
         src="../conti-guide.pdf"
