--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -55,7 +55,7 @@
       <small>(Tap to copy)</small>
     </div>
 
-  <div class="role-button">    
+  <div class="role-buttons">    
     <a class="button" href="https://engage360training.com" target="_blank">Launch Training</a>
   </div>
       
