--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -60,12 +60,9 @@
   </div>
       
     <p class="instructions">
-      <iframe 
-        src="../conti-guide.pdf"
-        width="100%" 
-        height="600px"
-        style="border: none;">
-      </iframe>
+      <div class="role-buttons">    
+        <a class="button" href="../conti-guide.pdf" target="_blank">Instruction Guide</a>
+      </div>
     </p>
 
     <footer style="margin-top: 40px;">
