--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -55,6 +55,16 @@
       <small>(Tap to copy)</small>
     </div>
 
+    <div class="cred-box" onclick="copyToClipboard('402-391-7280')">
+      Store Phone Number: 402-391-7280<br>
+      <small>(Tap to copy)</small>
+    </div>
+
+    <div class="cred-box" onclick="copyToClipboard('2820 S. 84th St Omaha NE 68124')">
+      Store Address: 2820 S. 84th St Omaha NE 68124<br>
+      <small>(Tap to copy)</small>
+    </div>
+  
   <div class="role-buttons">    
     <a class="button" href="https://engage360training.com" target="_blank">Launch Training</a>
   </div>
