--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -45,25 +45,20 @@
     <h1>Continental Training - Store 01</h1>
     <p>Welcome to the Continental Training page.</p>
 
-    <div class="cred-box" onclick="copyToClipboard('Jensen Tire & Auto #1')">
-      Store Name: Jensen Tire & Auto #1<br>
-      <small>(Tap to copy)</small>
-    </div>
-
-    <div class="cred-box" onclick="copyToClipboard('8288740')">
-      Account Number: 8288740<br>
-      <small>(Tap to copy)</small>
-    </div>
-
-    <div class="cred-box" onclick="copyToClipboard('402-391-7280')">
-      Store Phone Number: 402-391-7280<br>
-      <small>(Tap to copy)</small>
-    </div>
-
-    <div class="cred-box" onclick="copyToClipboard('2820 S. 84th St Omaha NE 68124')">
-      Store Address: 2820 S. 84th St Omaha NE 68124<br>
-      <small>(Tap to copy)</small>
-    </div>
+<div class="grid-container">
+  <div class="cred-box" onclick="copyToClipboard('Jensen Tire & Auto #1')">
+    Store Name: Jensen Tire & Auto #1<br><small>(Tap to copy)</small>
+  </div>
+  <div class="cred-box" onclick="copyToClipboard('8288740')">
+    Account Number: 8288740<br><small>(Tap to copy)</small>
+  </div>
+  <div class="cred-box" onclick="copyToClipboard('402-391-7280')">
+    Store Phone Number: <a href="tel:4023917280">402-391-7280</a><br><small>(Tap to copy)</small>
+  </div>
+  <div class="cred-box" onclick="copyToClipboard('2820 S. 84th St Omaha NE 68124')">
+    Store Address: 2820 S. 84th St Omaha NE 68124<br><small>(Tap to copy)</small>
+  </div>
+</div>
   
   <div class="role-buttons">    
     <a class="button" href="https://engage360training.com" target="_blank">Launch Training</a>
