--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -60,7 +60,7 @@
   </div>
 </div>
   
-  <div class="role-buttons">    
+  <div class="training-buttons">    
     <a class="button" href="https://engage360training.com" target="_blank">Launch Training</a>
   </div>
       
