--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -65,7 +65,7 @@
   </div>
       
     <p class="instructions">
-      <div class="role-buttons">    
+      <div class="training-buttons">    
         <a class="button" href="../conti-guide.pdf" target="_blank">Instruction Guide</a>
       </div>
     </p>
