--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -20,7 +19,7 @@
 
   <div class="role-buttons">    
     <a class="button" href="Conti.html">Continental Training</a>
-    <a class="button" href="#">Sample Training Link 2</a>
+    <a class="button" href="Goodyear.html">Goodyear Training</a>
   </div>
 
     <footer>
