--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -20,6 +20,8 @@
   <div class="role-buttons">    
     <a class="button" href="Conti.html">Continental Training</a>
     <a class="button" href="Goodyear.html">Goodyear Training</a>
+    <a class="button" href="Goodyear.html">BG Training</a>
+    <a class="button" href="Goodyear.html">Tireworks Resources</a>
   </div>
 
     <footer>
