--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -71,7 +71,7 @@
     </p>
 
     <footer style="margin-top: 40px;">
-        Questions? Contact <a href="mailto:it@jensentire.com">it@jensentire.com</a>
+        Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
     </footer>
   </div>
 </section>
