--- a/Store 01/tech.html
+++ b/Store 01/tech.html
@@ -24,7 +24,7 @@
   </div>
 
     <footer>
-        Questions? Contact <a href="mailto:it@jensentire.com">it@jensentire.com</a>
+        Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
     </footer>
   </div>
 </section>
