--- a/Store 01/Goodyear.html
+++ b/Store 01/Goodyear.html
@@ -45,10 +45,11 @@
     <h1>Goodyear Training - Store 01</h1>
     <p>Welcome to the Goodyear Training page.</p>
 
-<a class="button" onclick="copyToClipboard('901680')">
-   NonSig: 901680<br><small>(Tap to copy)</small>
-</a>
-
+<div class="cred-box">      
+  <a class="button" onclick="copyToClipboard('901680')">
+     NonSig: 901680<br><small>(Tap to copy)</small>
+  </a>
+</div>
   
   <div class="training-buttons">    
     <a class="button" href="https://www.thegoodyearlearningcenter.com/" target="_blank">Launch Training</a>
