--- a/Store 01/Goodyear.html
+++ b/Store 01/Goodyear.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../shared-style.css">
     <style>
         .cred-box {
+            width: 100%;
             background: #000;
             color: #fff;
             padding: 10px;
