--- a/Store 01/Goodyear.html
+++ b/Store 01/Goodyear.html
@@ -8,6 +8,7 @@
     <style>
         .cred-box {
             width: 100%;
+            max-width: 600px;
             background: #000;
             color: #fff;
             padding: 10px;
