--- a/Store 01/Goodyear.html
+++ b/Store 01/Goodyear.html
@@ -20,6 +20,7 @@
             box-shadow: 0 2px 5px rgba(0,0,0,0.2);
             transition: background 0.3s ease;
             cursor: pointer;
+            display: inline-block;
         }
         .cred-box:hover {
             background: #222;
