--- a/Store 01/Goodyear.html
+++ b/Store 01/Goodyear.html
@@ -11,7 +11,7 @@
             max-width: 600px;
             background: #000;
             color: #fff;
-            padding: 10px 0 auto;
+            padding: 10px;
             margin-top: 10px;
             margin-bottom: 20px;
             border-radius: 10px;
