--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -20,7 +20,10 @@
   <div class="role-buttons">    
     <a class="button" href="Conti.html">Continental Training</a>
     <a class="button" href="Goodyear.html">Goodyear Training</a>
+    <a class="button" href="Goodyear.html">Hunter Training</a>
+    <a class="button" href="Goodyear.html">Todays Class</a>
     <a class="button" href="Goodyear.html">BG Training</a>
+    <a class="button" href="Goodyear.html">NAPA Training</a>
     <a class="button" href="Goodyear.html">Tireworks Resources</a>
   </div>
 
