--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -17,15 +17,21 @@
     <h1>Manager Training - Store 01</h1>
     <p>Welcome to your custom training page.</p>
 
-  <div class="role-buttons">    
-    <a class="button" href="Conti.html">Continental Training</a>
-    <a class="button" href="Goodyear.html">Goodyear Training</a>
-    <a class="button" href="Goodyear.html">Hunter Training</a>
-    <a class="button" href="Goodyear.html">Todays Class</a>
-    <a class="button" href="Goodyear.html">BG Training</a>
-    <a class="button" href="Goodyear.html">NAPA Training</a>
-    <a class="button" href="Goodyear.html">Tireworks Resources</a>
+<div class="role-grid">
+  <div class="small-button" href="Conti.html">Continental Training
   </div>
+  <div class="small-button" href="Goodyear.html">Goodyear Training
+  </div>
+  <div class="small-button" href=".">Hunter Training
+  </div>
+  <div class="small-button" href="Goodyear.html">Todays Class
+  </div>
+  <div class="small-button" href="Goodyear.html">BG Training
+  </div>
+  <div class="small-button" href="Goodyear.html">NAPA Training
+  <div/>
+  <div class="small-button" href="Goodyear.html"> Tireworks Resources
+</div>
 
     <footer>
         Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
