--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -18,19 +18,19 @@
     <p>Welcome to your custom training page.</p>
 
 <div class="role-grid">
-  <div class="small-button" href="Conti.html">Continental Training
+  <div class="button" href="Conti.html">Continental Training
   </div>
-  <div class="small-button" href="Goodyear.html">Goodyear Training
+  <div class="button" href="Goodyear.html">Goodyear Training
   </div>
-  <div class="small-button" href=".">Hunter Training
+  <div class="button" href=".">Hunter Training
   </div>
-  <div class="small-button" href="Goodyear.html">Todays Class
+  <div class="button" href="Goodyear.html">Todays Class
   </div>
-  <div class="small-button" href="Goodyear.html">BG Training
+  <div class="button" href="Goodyear.html">BG Training
   </div>
-  <div class="small-button" href="Goodyear.html">NAPA Training
+  <div class="button" href="Goodyear.html">NAPA Training
   <div/>
-  <div class="small-button" href="Goodyear.html"> Tireworks Resources
+  <div class="button" href="Goodyear.html"> Tireworks Resources
 </div>
 
     <footer>
