--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -29,8 +29,9 @@
   <div class="button" href="Goodyear.html">BG Training
   </div>
   <div class="button" href="Goodyear.html">NAPA Training
-  <div/>
+  </div>
   <div class="button" href="Goodyear.html"> Tireworks Resources
+  </div>
 </div>
 
     <footer>
