--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -18,20 +18,20 @@
     <p>Welcome to your custom training page.</p>
 
 <div class="role-grid">
-  <a class="button" href="Conti.html">Continental Training
-  </a>
-  <a class="button" href="Goodyear.html">Goodyear Training
-  </a>
-  <a class="button" href=".">Hunter Training
-  </a>
-  <a class="button" href="Goodyear.html">Todays Class
-  </a>
-  <a class="button" href="Goodyear.html">BG Training
-  </a>
-  <a class="button" href="Goodyear.html">NAPA Training
-  </a>
-  <a class="button" href="Goodyear.html"> Tireworks Resources
-  </a>
+  <div class="button" href="Conti.html">Continental Training
+  </div>
+  <div class="button" href="Goodyear.html">Goodyear Training
+  </div>
+  <div class="button" href=".">Hunter Training
+  </div>
+  <div class="button" href="Goodyear.html">Todays Class
+  </div>
+  <div class="button" href="Goodyear.html">BG Training
+  </div>
+  <div class="button" href="Goodyear.html">NAPA Training
+  </div>
+  <div class="button" href="Goodyear.html"> Tireworks Resources
+  </div>
 </div>
 
     <footer>
