--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -18,21 +18,22 @@
     <p>Welcome to your custom training page.</p>
 
 <div class="role-grid">
-  <div class="button" onclick="Conti.html">Continental Training
-  </div>
-  <div class="button" onclick="Goodyear.html">Goodyear Training
-  </div>
-  <div class="button" onclick=".">Hunter Training
-  </div>
-  <div class="button" onclick="Goodyear.html">Todays Class
-  </div>
-  <div class="button" onclick="Goodyear.html">BG Training
-  </div>
-  <div class="button" onclick="Goodyear.html">NAPA Training
-  </div>
-  <div class="button" onclick="Goodyear.html"> Tireworks Resources
-  </div>
+  <a href="Conti.html"><div class="button">Continental Training</div>
+  </a>
+  <a href="Goodyear.html"><div class="button">Goodyear Training</div>
+  </a>
+  <a href="Hunter.html"><div class="button">Hunter Training</div>
+  </a>
+  <a href="TodaysClass.html"><div class="button">Todays Class</div>
+  </a>
+  <a href="BG.html"><div class="button">BG Training</div>
+  </a>
+  <a href="NAPA.html"><div class="button">NAPA Training</div>
+  </a>
+  <a href="Tireworks.html"><div class="button">Tireworks Resources</div>
+  </a>
 </div>
+
 
     <footer>
         Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
