--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -18,7 +18,7 @@
     <p>Welcome to your custom training page.</p>
 
 <div class="role-grid">
-  <a href="Conti.html">Continental Training</div>
+  <a class=button href="Conti.html">Continental Training</div>
   </a>
   <a href="Goodyear.html"><div class="button">Goodyear Training</div>
   </a>
