--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -18,19 +18,19 @@
     <p>Welcome to your custom training page.</p>
 
 <div class="role-grid">
-  <a class=button href="Conti.html">Continental Training</div>
+  <a class="button" href="Conti.html">Continental Training</div>
   </a>
-  <a href="Goodyear.html"><div class="button">Goodyear Training</div>
+  <a class="button" href="Goodyear.html">Goodyear Training</div>
   </a>
-  <a href="Hunter.html"><div class="button">Hunter Training</div>
+  <a class="button" href="Hunter.html">Hunter Training</div>
   </a>
-  <a href="TodaysClass.html"><div class="button">Todays Class</div>
+  <a class="button" href="TodaysClass.html">Todays Class</div>
   </a>
-  <a href="BG.html"><div class="button">BG Training</div>
+  <a class="button" href="BG.html">BG Training</div>
   </a>
-  <a href="NAPA.html"><div class="button">NAPA Training</div>
+  <a class="button" href="NAPA.html">NAPA Training</div>
   </a>
-  <a href="Tireworks.html"><div class="button">Tireworks Resources</div>
+  <a class="button" href="Tireworks.html">Tireworks Resources</div>
   </a>
 </div>
 
