--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -18,19 +18,19 @@
     <p>Welcome to your custom training page.</p>
 
 <div class="role-grid">
-  <a class="button" href="Conti.html">Continental Training</div>
+  <a class="button" href="Conti.html">Continental Training
   </a>
-  <a class="button" href="Goodyear.html">Goodyear Training</div>
+  <a class="button" href="Goodyear.html">Goodyear Training
   </a>
-  <a class="button" href="Hunter.html">Hunter Training</div>
+  <a class="button" href="Hunter.html">Hunter Training
   </a>
-  <a class="button" href="TodaysClass.html">Todays Class</div>
+  <a class="button" href="TodaysClass.html">Todays Class
   </a>
-  <a class="button" href="BG.html">BG Training</div>
+  <a class="button" href="BG.html">BG Training
   </a>
-  <a class="button" href="NAPA.html">NAPA Training</div>
+  <a class="button" href="NAPA.html">NAPA Training
   </a>
-  <a class="button" href="Tireworks.html">Tireworks Resources</div>
+  <a class="button" href="Tireworks.html">Tireworks Resources
   </a>
 </div>
 
