--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </div>
 
   <div class="quote-footer">
-    <p class="quote">“Quality means doing it right when no one is looking.”</p>
+    <p class="quote">“Anyone who stops learning is old, whether at twenty or eighty. Anyone who keeps learning stays young.”</p>
     <p class="quote-author">– Henry Ford</p>
   </div> 
 </section>
