--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -32,6 +32,8 @@
   </a>
   <a class="button" href="Tireworks.html">Tireworks Resources
   </a>
+  <a class="button" href=".">Rewards/Spiffs
+  </a>
 </div>
 
 
