--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -26,7 +26,7 @@
   </a>
   <a class="button" href="TodaysClass.html">Todays Class
   </a>
-  <a class="button" href="BG.html">BG Training
+  <a class="button" href="https://go.team1bg.com/">BG Training
   </a>
   <a class="button" href="NAPA.html">NAPA Training
   </a>
