--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -30,7 +30,7 @@
   </a>
   <a class="button" href="NAPA.html">NAPA Training
   </a>
-  <a class="button" href="Tireworks.html">Tireworks Resources
+  <a class="button" href="https://www.youtube.com/watch?v=dN11zcwkbxA&list=PLZjmO5pvmh7TNPAngksyF8c25jk7x-wiw">Tireworks Resources
   </a>
   <a class="button" href=".">Rewards/Spiffs
   </a>
