--- a/Store 01/spiff.html
+++ b/Store 01/spiff.html
@@ -3,39 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Goodyear Training | Store 01</title>
+    <title>Rewards & Spiffs | Store 01</title>
     <link rel="stylesheet" href="../shared-style.css">
-    <style>
-        .cred-box {
-            width: 90%;
-            max-width: 600px;
-            background: #000;
-            color: #fff;
-            padding: 10px;
-            margin-top: 10px;
-            margin-bottom: 20px;
-            border-radius: 10px;
-            text-align: center;
-            font-size: 14px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-            transition: background 0.3s ease;
-            cursor: pointer;
-            display: inline-block;
-        }
-        .cred-box:hover {
-            background: #222;
-        }
-        .cred-box small {
-            display: block;
-            margin-top: 5px;
-            font-size: 12px;
-            color: #ccc;
-        }
-
-        .instructions {
-            margin-top: 15px;
-        }
-    </style>
 </head>
 <body>
 
@@ -45,23 +14,13 @@
     
 <section id="role">
   <div class="container">
-    <h1>Goodyear Training - Store 01</h1>
-    <p>Welcome to the Goodyear Training page.</p>
-
-    <div class="cred-box" onclick="copyToClipboard('901680')">
-      Nonsig: 901680<br>
-      <small>(Tap to copy)</small>
-    </div>
+    <h1>Spiffs - Store 01</h1>
+    <p>Welcome to the Spiff reporting page.</p>
   
   <div class="training-buttons">    
-    <a class="button" href="https://www.thegoodyearlearningcenter.com/" target="_blank">Launch Training</a>
+    <a class="button" href="https://www.Gyrewardsplus.com" target="_blank">Goodyear Rewards</a>
+    <a class="button" href="https://www.ContinentalRPM.com" target="_blank">Continental Rewards</a>
   </div>
-      
-    <p class="instructions">
-      <div class="training-buttons">    
-        <a class="button" href="../Goodyear.pdf" target="_blank">Instruction Guide</a>
-      </div>
-    </p>
 
     <footer style="margin-top: 40px;">
         Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
