--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -32,7 +32,7 @@
   </a>
   <a class="button" href="https://www.youtube.com/watch?v=dN11zcwkbxA&list=PLZjmO5pvmh7TNPAngksyF8c25jk7x-wiw" target="_blank">Tireworks Resources
   </a>
-  <a class="button" href=".">Rewards/Spiffs
+  <a class="button" href="spiff.html">Rewards/Spiffs
   </a>
 </div>
 
