--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -37,8 +37,16 @@
 <body>
 
 <header>
+  <a href="../manager.html">
     <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
+  </a>
+  <div id="hamburger" onclick="toggleMenu()">☰</div>
 </header>
+
+<nav id="nav-menu">
+  <a href="../index.html">Store Selection</a>
+  <a href="../training/select-role.html">Training Selection</a>
+</nav>
     
 <section id="role">
   <div class="container">
