--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -37,7 +37,7 @@
 <body>
 
 <header>
-  <a href="../manager.html">
+  <a href="../Store%2001/manager.html">
     <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
   </a>
   <div id="hamburger" onclick="toggleMenu()">☰</div>
