--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -45,7 +45,8 @@
 
 <nav id="nav-menu">
   <a href="../index.html">Store Selection</a>
-  <a href="../training/select-role.html">Training Selection</a>
+  <a href="../Store%2001/select-role.html">Training Selection</a>
+  <a href="#" onclick="openSupportChat()">Chat with Support</a>
 </nav>
     
 <section id="role">
@@ -89,6 +90,27 @@ function toggleMenu() {
   const menu = document.getElementById("nav-menu");
   menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
 }
+
+<script src="https://jensensupport.co/assets/chat/chat-no-jquery.min.js"></script>
+<script>
+  var zammadChatInstance;
+
+  (function() {
+    zammadChatInstance = new ZammadChat({
+      background: 'rgb(73,73,73)',
+      fontSize: '12px',
+      chatId: 1,
+      show: false // Don't auto-show
+    });
+  })();
+
+  function openSupportChat() {
+    if (zammadChatInstance) {
+      zammadChatInstance.show(); // Programmatically open chat window
+    } else {
+      alert("Chat is not available right now.");
+    }
+  }
     
 function copyToClipboard(text) {
     navigator.clipboard.writeText(text).then(function() {
