--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -91,6 +91,8 @@ function toggleMenu() {
   menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
 }
 
+</script>
+    
 <script src="https://jensensupport.co/assets/chat/chat-no-jquery.min.js"></script>
 <script>
   var zammadChatInstance;
