--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -33,28 +33,6 @@
             margin-top: 15px;
         }
     </style>
-
-    <script src="https://jensensupport.co/assets/chat/chat-no-jquery.min.js"></script>
-<script>
-  var zammadChatInstance;
-
-  (function() {
-    zammadChatInstance = new ZammadChat({
-      background: 'rgb(73,73,73)',
-      fontSize: '12px',
-      chatId: 1,
-      show: false // Don't auto-show
-    });
-  })();
-
-  function openSupportChat() {
-    if (zammadChatInstance) {
-      zammadChatInstance.show(); // Programmatically open chat window
-    } else {
-      alert("Chat is not available right now.");
-    }
-  }
-</script>
 </head>
 <body>
 
@@ -68,7 +46,7 @@
 <nav id="nav-menu">
   <a href="../index.html">Store Selection</a>
   <a href="../Store%2001/select-role.html">Training Selection</a>
-  <a href="#" onclick="openSupportChat()">Chat with Support</a>
+  <button class="open-zammad-chat">Chat with us</button>
 </nav>
     
 <section id="role">
@@ -120,6 +98,20 @@ function copyToClipboard(text) {
         alert('Failed to copy: ' + err);
     });
 }
+</script>
+
+    <script src="https://jensensupport.co/assets/chat/chat-no-jquery.min.js"></script>
+<script>
+  var zammadChatInstance;
+
+  (function() {
+    zammadChatInstance = new ZammadChat({
+      background: 'rgb(73,73,73)',
+      fontSize: '12px',
+      chatId: 1,
+      show: false // Don't auto-show
+    });
+  })();
 </script>
 
 </body>
