--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -46,7 +46,7 @@
 <nav id="nav-menu">
   <a href="../index.html">Store Selection</a>
   <a href="../Store%2001/select-role.html">Training Selection</a>
-  <button class="open-zammad-chat">Chat with us</button>
+  <a href="#" onclick="open-zammad-chat">Chat with us</a>
 </nav>
     
 <section id="role">
