--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -113,7 +113,7 @@ function copyToClipboard(text) {
 </script>
 <script>
   document.addEventListener("DOMContentLoaded", function() {
-    const chatLink = document.getElementById("chat-link");
+    const chatLink = document.getElementById("open-zammad-chat");
     chatLink.addEventListener("click", function(e) {
       e.preventDefault();
       if (window.ZammadChat) {
