--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -46,7 +46,7 @@
 <nav id="nav-menu">
   <a href="../index.html">Store Selection</a>
   <a href="../Store%2001/select-role.html">Training Selection</a>
-  <a href="#" id="open-zammad-chat" onclick="ZammadChat && ZammadChat.show(); return false;">Chat with us</a>
+  <a href="#" onclick="window.myZammadChat.show(); return false;">Chat with us</a>
 </nav>
     
 <section id="role">
@@ -105,11 +105,12 @@ function copyToClipboard(text) {
 <script src="https://jensensupport.co/assets/chat/chat.min.js"></script>
 <script>
 $(function() {
-  new ZammadChat({
-    fontSize: '12px',
-    chatId: 1,
-    show: false
-  });
+  window.myZammadChat = new ZammadChat({
+  background: 'rgb(73,73,73)',
+  fontSize: '12px',
+  chatId: 1,
+  show: false
+});
 });
 </script>
 <script>
