--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Continental Training | Store 01</title>
     <link rel="stylesheet" href="../shared-style.css">
     <style>
@@ -28,6 +28,7 @@
             font-size: 12px;
             color: #ccc;
         }
+
         .instructions {
             margin-top: 15px;
         }
@@ -45,9 +46,9 @@
 <nav id="nav-menu">
   <a href="../index.html">Store Selection</a>
   <a href="../Store%2001/select-role.html">Training Selection</a>
-  <a href="#" onclick="window.myZammadChat.show(); return false;">Chat with us</a>
+  <button class="open-zammad-chat">Chat with us</button>
 </nav>
-
+    
 <section id="role">
   <div class="container">
     <h1>Continental Training - Store 01</h1>
@@ -67,18 +68,48 @@
         Store Address: 2820 S. 84th St Omaha NE 68124<br><small>(Tap to copy)</small>
       </div>
     </div>
-
+  
     <div class="training-buttons">    
       <a class="button" href="https://engage360training.com" target="_blank">Launch Training</a>
-      <a class="button" href="../conti-guide.pdf" target="_blank">Instruction Guide</a>
     </div>
+      
+    <p class="instructions">
+      <div class="training-buttons">    
+        <a class="button" href="../conti-guide.pdf" target="_blank">Instruction Guide</a>
+      </div>
+    </p>
 
     <footer style="margin-top: 40px;">
-      Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
+        Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
     </footer>
   </div>
 </section>
 
+<!-- jQuery is required by your Zammad chat script -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Zammad chat script -->
+<script src="https://jensensupport.co/assets/chat/chat.min.js"></script>
+
+<!-- Zammad Chat Initialization + Button Hook -->
+<script>
+$(function() {
+  // Initialize ZammadChat instance
+  const zammadChatInstance = new ZammadChat({
+    fontSize: '12px',
+    chatId: 1,
+    show: false
+  });
+
+  // Button click opens chat window
+  $('.open-zammad-chat').on('click', function(e) {
+    e.preventDefault();
+    zammadChatInstance.show();
+  });
+});
+</script>
+
+<!-- Hamburger Menu Toggle + Clipboard Logic -->
 <script>
 function toggleMenu() {
   const menu = document.getElementById("nav-menu");
@@ -86,26 +117,14 @@ function toggleMenu() {
 }
 
 function copyToClipboard(text) {
-    navigator.clipboard.writeText(text).then(function() {
-        alert('Copied: ' + text);
-    }, function(err) {
-        alert('Failed to copy: ' + err);
-    });
-}
-</script>
-
-<!-- Zammad Chat Script -->
-<script src="https://jensensupport.co/assets/chat/chat.min.js"></script>
-<script>
-document.addEventListener("DOMContentLoaded", function() {
-  window.myZammadChat = new ZammadChat({
-    background: 'rgb(73,73,73)',
-    fontSize: '12px',
-    chatId: 1,
-    show: false
+  navigator.clipboard.writeText(text).then(function() {
+    alert('Copied: ' + text);
+  }, function(err) {
+    alert('Failed to copy: ' + err);
   });
-});
+}
 </script>
 
 </body>
 </html>
+
