--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -96,6 +96,8 @@
 $(function() {
   // Initialize ZammadChat instance
   const zammadChatInstance = new ZammadChat({
+    title: 'Jensen Support',
+    background: 'rgb(249, 117, 38)',
     fontSize: '12px',
     chatId: 1,
     show: false
