--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -44,9 +44,11 @@
 </header>
 
 <nav id="nav-menu">
-  <a href="../index.html">Store Selection</a>
-  <a href="../Store%2001/select-role.html">Training Selection</a>
-  <a href="#" class="nav-link open-zammad-chat">Chat with us</a>
+  <a href="../index.html">Main Dashboard</a>
+  <a href="../Store%2001/select-role.html">Role selection</a>
+  <a href="../Store%2001/manager.html">Manager Courses</a>
+  <a href="../Store%2001/tech.html">Technician Courses</a>
+  <a href="#" class="nav-link open-zammad-chat">Jensen Support quick chat</a>
 </nav>
     
 <section id="role">
