--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -48,6 +48,7 @@
   <a href="../Store%2001/select-role.html">Role selection</a>
   <a href="../Store%2001/manager.html">Manager Courses</a>
   <a href="../Store%2001/tech.html">Technician Courses</a>
+  <li onclick="openFeedbackPopup()">Submit Feedback</li>
   <a href="#" class="nav-link open-zammad-chat">Jensen Support quick chat</a>
 </nav>
     
@@ -87,16 +88,65 @@
   </div>
 </section>
 
-<!-- jQuery is required by your Zammad chat script -->
+<div id="feedbackPopup" class="feedback-popup">
+  <div class="feedback-content">
+    <h3>We value your input!</h3>
+    <form id="feedback-form">
+      <textarea
+        id="feedback"
+        name="feedback"
+        placeholder="Leave your feedback here..."
+        required
+      ></textarea>
+      <br />
+      <button type="submit" class="button">Submit</button>
+      <button type="button" class="button" onclick="closeFeedbackPopup()">Cancel</button>
+    </form>
+    <p id="thank-you" style="display: none; color: black; margin-top: 20px;">Thank you for your feedback!</p>
+  </div>
+</div>
+
+<script>
+function openFeedbackPopup() {
+  document.getElementById('feedbackPopup').style.display = 'block';
+}
+
+function closeFeedbackPopup() {
+  document.getElementById('feedbackPopup').style.display = 'none';
+}
+
+document.getElementById("feedback-form").addEventListener("submit", async function (e) {
+  e.preventDefault();
+  const feedback = document.getElementById("feedback").value;
+
+  const response = await fetch("https://default4e006550b51242c29ec2b301c0fa6a.51.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/5a8c354b3a634ab893a5879f150f715d/triggers/manual/paths/invoke/?api-version=1&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=Jr-fRt0XwxxcfPUPvbpjS-xwfZlb2rjb4J_L2xwhXFg", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify({ feedback })
+  });
+
+  if (response.ok) {
+    document.getElementById("feedback").value = "";
+    document.getElementById("thank-you").style.display = "block";
+    setTimeout(() => {
+      document.getElementById("thank-you").style.display = "none";
+      closeFeedbackPopup();
+    }, 2000);
+  } else {
+    alert("Submission failed. Please try again.");
+  }
+});
+</script>
+
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-<!-- Zammad chat script -->
 <script src="https://jensensupport.co/assets/chat/chat.min.js"></script>
 
-<!-- Zammad Chat Initialization + Button Hook -->
 <script>
 $(function() {
-  // Initialize ZammadChat instance
   const zammadChatInstance = new ZammadChat({
     title: 'Jensen Support',
     background: 'rgb(249, 117, 38)',
@@ -105,7 +155,6 @@ $(function() {
     show: false
   });
 
-  // Button click opens chat window
   $('.open-zammad-chat').on('click', function(e) {
     e.preventDefault();
     zammadChatInstance.show();
@@ -113,7 +162,6 @@ $(function() {
 });
 </script>
 
-<!-- Hamburger Menu Toggle + Clipboard Logic -->
 <script>
 function toggleMenu() {
   const menu = document.getElementById("nav-menu");
