--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -48,7 +48,7 @@
   <a href="../Store%2001/select-role.html">Role selection</a>
   <a href="../Store%2001/manager.html">Manager Courses</a>
   <a href="../Store%2001/tech.html">Technician Courses</a>
-  <li onclick="openFeedbackPopup()">Submit Feedback</li>
+  <a onclick="openFeedbackPopup()">Submit Feedback</a>
   <a href="#" class="nav-link open-zammad-chat">Jensen Support quick chat</a>
 </nav>
     
