--- a/Store 01/Goodyear.html
+++ b/Store 01/Goodyear.html
@@ -42,6 +42,16 @@
 <header>
     <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
 </header>
+
+<nav id="nav-menu">
+  <a href="../index.html">Main Dashboard</a>
+  <a href="../Store%2001/select-role.html">Role selection</a>
+  <a href="../Store%2001/manager.html">Manager Courses</a>
+  <a href="../Store%2001/tech.html">Technician Courses</a>
+  <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
+  <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
+  <a href="#" class="https://jensentireandauto.com/">Retail Site</a>
+</nav>
     
 <section id="role">
   <div class="container">
