--- a/Store 01/Goodyear.html
+++ b/Store 01/Goodyear.html
@@ -79,13 +79,92 @@
   </div>
 </section>
 
+<div id="feedbackPopup" class="feedback-popup">
+  <div class="feedback-content">
+    <h3>We value your input!</h3>
+    <form id="feedback-form">
+      <textarea
+        id="feedback"
+        name="feedback"
+        placeholder="Leave your feedback here..."
+        required
+      ></textarea>
+      <br />
+      <button type="submit" class="button">Submit</button>
+      <button type="button" class="button" onclick="closeFeedbackPopup()">Cancel</button>
+    </form>
+    <p id="thank-you" style="display: none; color: black; margin-top: 20px;">Thank you for your feedback!</p>
+  </div>
+</div>
+
 <script>
+function openFeedbackPopup() {
+  document.getElementById('feedbackPopup').style.display = 'block';
+}
+
+function closeFeedbackPopup() {
+  document.getElementById('feedbackPopup').style.display = 'none';
+}
+
+document.getElementById("feedback-form").addEventListener("submit", async function (e) {
+  e.preventDefault();
+  const feedback = document.getElementById("feedback").value;
+
+  const response = await fetch("https://default4e006550b51242c29ec2b301c0fa6a.51.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/5a8c354b3a634ab893a5879f150f715d/triggers/manual/paths/invoke/?api-version=1&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=Jr-fRt0XwxxcfPUPvbpjS-xwfZlb2rjb4J_L2xwhXFg", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify({ feedback })
+  });
+
+  if (response.ok) {
+    document.getElementById("feedback").value = "";
+    document.getElementById("thank-you").style.display = "block";
+    setTimeout(() => {
+      document.getElementById("thank-you").style.display = "none";
+      closeFeedbackPopup();
+    }, 2000);
+  } else {
+    alert("Submission failed. Please try again.");
+  }
+});
+</script>
+
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<script src="https://jensensupport.co/assets/chat/chat.min.js"></script>
+
+<script>
+$(function() {
+  const zammadChatInstance = new ZammadChat({
+    title: 'Jensen Support',
+    background: 'rgb(249, 117, 38)',
+    fontSize: '12px',
+    chatId: 1,
+    show: false
+  });
+
+  $('.open-zammad-chat').on('click', function(e) {
+    e.preventDefault();
+    zammadChatInstance.show();
+  });
+});
+</script>
+
+<script>
+function toggleMenu() {
+  const menu = document.getElementById("nav-menu");
+  menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
+}
+
 function copyToClipboard(text) {
-    navigator.clipboard.writeText(text).then(function() {
-        alert('Copied: ' + text);
-    }, function(err) {
-        alert('Failed to copy: ' + err);
-    });
+  navigator.clipboard.writeText(text).then(function() {
+    alert('Copied: ' + text);
+  }, function(err) {
+    alert('Failed to copy: ' + err);
+  });
 }
 </script>
 
