--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -50,7 +50,7 @@
   <a href="../Store%2001/tech.html">Technician Courses</a>
   <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
   <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
-  <a href="https://jensentireandauto.com/">Retail Site</a>
+  <a href="https://jensentireandauto.com">Retail Site</a>
 </nav>
     
 <section id="role">
