--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -169,6 +169,30 @@ function toggleMenu() {
   menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
 }
 
+function closeMenu() {
+    const menu = document.getElementById("nav-menu");
+    menu.classList.remove("open");
+  }
+
+  document.addEventListener("click", function (event) {
+    const menu = document.getElementById("nav-menu");
+    const hamburger = document.getElementById("hamburger");
+
+    if (
+      menu.classList.contains("open") &&
+      !menu.contains(event.target) &&
+      !hamburger.contains(event.target)
+    ) {
+      closeMenu();
+    }
+  });
+
+  document.addEventListener("keydown", function (event) {
+    if (event.key === "Escape") {
+      closeMenu();
+    }
+  });
+    
 function copyToClipboard(text) {
   navigator.clipboard.writeText(text).then(function() {
     alert('Copied: ' + text);
