--- a/Store 01/Goodyear.html
+++ b/Store 01/Goodyear.html
@@ -40,7 +40,9 @@
 <body>
 
 <header>
-    <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
+     <a href="../Store%2001/manager.html">
+      <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
+    </a>
     <div id="hamburger" onclick="toggleMenu()">☰</div>
 </header>
 
