--- a/Store 01/select-role.html
+++ b/Store 01/select-role.html
@@ -10,7 +10,9 @@
 <body>
 
 <header>
-    <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
+  <a href="../index.html">
+      <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
+  </a>
     <div id="hamburger" onclick="toggleMenu()">☰</div>
 </header>
 
