--- a/Store 01/tech.html
+++ b/Store 01/tech.html
@@ -10,7 +10,10 @@
 <body>
 
 <header>
+  <a href="../index.html">
     <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
+  </a>
+<div id="hamburger" onclick="toggleMenu()">☰</div>
 </header>
 
 <section id="role">    
