--- a/Store 01/tech.html
+++ b/Store 01/tech.html
@@ -16,6 +16,16 @@
 <div id="hamburger" onclick="toggleMenu()">☰</div>
 </header>
 
+<nav id="nav-menu">
+  <a href="../index.html">Main Dashboard</a>
+  <a href="../Store%2001/select-role.html">Role selection</a>
+  <a href="../Store%2001/manager.html">Manager Courses</a>
+  <a href="../Store%2001/tech.html">Technician Courses</a>
+  <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
+  <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
+  <a href="https://jensentireandauto.com" target="_blank">Retail Site</a>
+</nav>
+
 <section id="role">    
  <div class="container">
     <h1>Technician Training - Store 01</h1>
