--- a/Store 04/manager.html
+++ b/Store 04/manager.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Technician Training | Store 04</title>
+    <title>Manager Training | Store 04</title>
     <link rel="stylesheet" href="../shared-style.css">
 </head>
 <body>
@@ -28,15 +27,28 @@
 
 <section id="role">    
  <div class="container">
-    <h1>Technician Training - Store 04</h1>
+    <h1>Manager Training - Store 04</h1>
     <p>Welcome to your custom training page.</p>
 
-  <div class="role-buttons">    
-    <a class="button" href="https://go.team1bg.com" target="_blank">BG Training</a>
-    <a class="button" href="Hunter.html">Hunter Training</a>
-    <a class="button" href="TodaysClass.html">Todays Class</a>
-    <a class="button" href="NAPA.html">NAPA Training</a>
-  </div>
+<div class="role-grid">
+  <a class="button" href="Conti.html">Continental Training
+  </a>
+  <a class="button" href="Goodyear.html">Goodyear Training
+  </a>
+  <a class="button" href="Hunter.html">Hunter Training
+  </a>
+  <a class="button" href="TodaysClass.html">Todays Class
+  </a>
+  <a class="button" href="https://go.team1bg.com" target="_blank">BG Training
+  </a>
+  <a class="button" href="NAPA.html">NAPA Training
+  </a>
+  <a class="button" href="https://www.youtube.com/watch?v=dN11zcwkbxA&list=PLZjmO5pvmh7TNPAngksyF8c25jk7x-wiw" target="_blank">Tireworks Resources
+  </a>
+  <a class="button" href="spiff.html">Rewards/ Spiffs
+  </a>
+</div>
+
 
     <footer>
         Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
