--- a/index.html
+++ b/index.html
@@ -1,70 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Jensen Tire & Auto Onboarding</title>
-    <link rel="stylesheet" href="shared-style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <title>Jensen Tire & Auto Onboarding</title>
+  <link rel="stylesheet" href="shared-style.css" />
+  <style>
+    .hidden { display: none; }
+    .card { background:#fff; border-radius:12px; padding:1rem; box-shadow:0 4px 10px rgba(0,0,0,.08); max-width:720px; margin:1rem auto; }
+    .stack > * { margin-bottom:.75rem; }
+    input, button { padding:.6rem .8rem; }
+    pre { background:#f6f6f6; padding:.75rem; border-radius:8px; overflow:auto; }
+    .muted { color:#666; font-size:.9rem; }
+  </style>
 </head>
 <body>
 
 <header>
-    <img src="logo.jpg" alt="Jensen Tire & Auto Logo">
+  <img src="logo.jpg" alt="Jensen Tire & Auto Logo">
 </header>
 
 <div class="snap-container">
-   <section id="onboarding">
-        <div class="container">
-            <h1>Welcome to Jensen Tire & Auto Onboarding</h1>
-            <p class="subheading">We’re excited to have you on board!</p>
-            <p>Please select your store location from the list below:</p>
+  <section id="onboarding">
+    <div class="container">
+      <h1>Welcome to Jensen Tire & Auto Onboarding</h1>
+      <p class="subheading">Sign in with your company username. We’ll send you to the correct store and role.</p>
 
-            <select id="storeSelect">
-                <option value="">-- Select Store --</option>
-                <option value="Store 01">Store 01 - 2820 South 84th Street, Omaha, NE</option>
-                <option value="Store 02">Store 02 - 3302 North 90th Street, Omaha, NE</option>
-                <option value="Store 04">Store 04 - 921 Galvin Road, Bellevue, NE</option>
-                <option value="Store 06">Store 06 - 4805 South 97th Street, Omaha, NE</option>
-                <option value="Store 07">Store 07 - 707 North 120th Street, Omaha, NE</option>
-                <option value="Store 09">Store 09 - 715 West Broadway, Council Bluffs, IA</option>
-                <option value="Store 10">Store 10 - 245 East Military, Fremont, NE</option>
-                <option value="Store 11">Store 11 - 8200 Parkview Blvd, LaVista, NE</option>
-                <option value="Store 12">Store 12 - 2010 Harney Street, Omaha, NE</option>
-                <option value="Store 14">Store 14 - 2845 South 168th Street, Omaha, NE</option>
-                <option value="Store 15">Store 15 - 5405 South 144th Street, Omaha, NE</option>
-                <option value="Store 16">Store 16 - 15737 West Dodge Road, Omaha, NE</option>
-                <option value="Store 17">Store 17 - 4901 L Street, Omaha, NE</option>
-                <option value="Store 18">Store 18 - 5115 North 108th Street, Omaha, NE</option>
-                <option value="Store 19">Store 19 - 16755 Monroe Street, Omaha, NE</option>
-                <option value="Store 21">Store 21 - 11501 South 42nd Street, Bellevue, NE</option>
-                <option value="Store 22">Store 22 - 15445 Spaulding Plaza, Omaha, NE</option>
-                <option value="Store 23">Store 23 - 1412 North 203rd Terrace, Elkhorn, NE</option>
-                <option value="Store 24">Store 24 - 11342 South 96th Street, Papillion, NE</option>
-                <option value="Store 25">Store 25 - 5430 Red Rock Lane, Lincoln, NE</option>
-                <option value="Store 26">Store 26 - 2733 North 83rd Street, Lincoln, NE</option>
-                <option value="Store 27">Store 27 - 18507 Oakmont Drive, Omaha, NE</option>
-            </select>
-
-            <button onclick="goToStore()">Continue</button>
-
-            <footer>
-                FAQs below. Further questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
-            </footer>
+      <!-- LOGIN -->
+      <div class="card stack" id="login-card">
+        <label class="muted">Username</label>
+        <input id="username" placeholder="e.g. bmiller" autocomplete="username">
+        <label class="muted">Password</label>
+        <input id="password" type="password" placeholder="••••••••" autocomplete="current-password">
+        <div>
+          <button id="signIn">Sign in</button>
         </div>
-    </section>
+        <p class="muted">Need access or forgot your password? Contact
+          <a href="mailto:support@jensentireandauto.com">Jensen Support</a>.
+        </p>
+        <pre id="status" class="hidden"></pre>
+      </div>
+
+      <footer>
+        FAQs below. Further questions? Contact
+        <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
+      </footer>
+    </div>
+  </section>
 </div>
 
 <section id="details" class="tall-section">
-  
   <div class="container accordion">
     <h2>New Hire FAQ</h2>
     <div class="accordion-item">
       <button onclick="toggleAccordion(this)">Do I have login information already?</button>
-      <div class="accordion-content">Most of the training links will have the proper credentials, if not please contact support.</div>
+      <div class="accordion-content">Your manager or IT will provide a username and temporary password. Sign in above.</div>
     </div>
     <div class="accordion-item">
       <button onclick="toggleAccordion(this)">How do I access training materials?</button>
-      <div class="accordion-content">After selecting your store, you’ll be directed to a role-specific training hub.</div>
+      <div class="accordion-content">After sign-in, you’ll be routed to your store’s role-specific hub.</div>
     </div>
     <div class="accordion-item">
       <button onclick="toggleAccordion(this)">Who do I contact with issues?</button>
@@ -75,61 +69,138 @@
   <div class="container feedback-section">
     <h1>We value your input!</h1>
     <form id="feedback-form">
-      <textarea
-        id="feedback"
-        name="feedback"
-        placeholder="Leave your feedback here..."
-      ></textarea>
+      <textarea id="feedback" name="feedback" placeholder="Leave your feedback here..."></textarea>
       <br />
-      <button type="submit" class="button">
-        Submit
-      </button>
+      <button type="submit" class="button">Submit</button>
     </form>
-    <p id="thank-you" style="display: none; color: white; margin-top: 20px;">Thank you for your feedback!</p>
+    <p id="thank-you" style="display:none; color:white; margin-top:20px;">Thank you for your feedback!</p>
   </div>
 
   <div class="quote-footer">
     <p class="quote">“Anyone who stops learning is old, whether at twenty or eighty. Anyone who keeps learning stays young.”</p>
     <p class="quote-author">– Henry Ford</p>
-  </div> 
+  </div>
 </section>
 
+<!-- Helpers -->
 <script>
-function goToStore() {
-    const store = document.getElementById('storeSelect').value;
-    if (!store) {
-        alert('Please select a store first.');
-        return;
-    }
-    window.location.href = store + '/select-role.html';
-}
-function toggleAccordion(button) {
+  function toggleAccordion(button) {
     const content = button.nextElementSibling;
     const isOpen = content.style.display === 'block';
     document.querySelectorAll('.accordion-content').forEach(el => el.style.display = 'none');
     if (!isOpen) content.style.display = 'block';
-}
+  }
 </script>
-    <script>
-      document.getElementById("feedback-form").addEventListener("submit", async function (e) {
-        e.preventDefault();
-        const feedback = document.getElementById("feedback").value;
-    
-        const response = await fetch("https://default4e006550b51242c29ec2b301c0fa6a.51.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/5a8c354b3a634ab893a5879f150f715d/triggers/manual/paths/invoke/?api-version=1&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=Jr-fRt0XwxxcfPUPvbpjS-xwfZlb2rjb4J_L2xwhXFg", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify({ feedback })
-        });
 
-        if (response.ok) {
-          alert("Thank you for your feedback!");
-          document.getElementById("feedback").value = "";
-        } else {
-          alert("Submission failed. Please try again.");
-        }
-      });
+<!-- Feedback form (unchanged) -->
+<script>
+  document.getElementById("feedback-form").addEventListener("submit", async function (e) {
+    e.preventDefault();
+    const feedback = document.getElementById("feedback").value;
+
+    const response = await fetch("https://default4e006550b51242c29ec2b301c0fa6a.51.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/5a8c354b3a634ab893a5879f150f715d/triggers/manual/paths/invoke/?api-version=1&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=Jr-fRt0XwxxcfPUPvbpjS-xwfZlb2rjb4J_L2xwhXFg", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ feedback })
+    });
+
+    if (response.ok) {
+      alert("Thank you for your feedback!");
+      document.getElementById("feedback").value = "";
+    } else {
+      alert("Submission failed. Please try again.");
+    }
+  });
 </script>
+
+<!-- Firebase (modular CDN) -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+  import {
+    getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut
+  } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+  import {
+    getFirestore, doc, getDoc, setDoc
+  } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+
+  // ===== 1) YOUR FIREBASE CONFIG =====
+  const firebaseConfig = {
+    apiKey: "AIzaSyC3clH2uoqhgqeEwj-uOlsNT5XTZHsI2W0",
+    authDomain: "user-creds.firebaseapp.com",
+    projectId: "user-creds",
+    appId: "1:253655292974:web:f066f853ef2f3dd7f5d3bf"
+  };
+
+  // ===== 2) SETTINGS =====
+  const FAKE_DOMAIN = "jta.local"; // the domain you used when creating users (username@jta.local)
+
+  // ===== 3) INIT =====
+  const app  = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db   = getFirestore(app);
+
+  // UI helpers
+  const $ = (id) => document.getElementById(id);
+  const statusEl = $("status");
+  function showStatus(obj) {
+    statusEl.classList.remove("hidden");
+    statusEl.textContent = JSON.stringify(obj, null, 2);
+  }
+
+  // Sign in with username + password (mapped to username@FAKE_DOMAIN)
+  $("signIn").onclick = async () => {
+    const uname = $("username").value.trim().toLowerCase();
+    const pw = $("password").value;
+    if (!uname || !pw) return showStatus({ error: "Enter username and password." });
+    try {
+      const email = `${uname}@${FAKE_DOMAIN}`;
+      await signInWithEmailAndPassword(auth, email, pw);
+      // onAuthStateChanged will handle the rest
+    } catch (e) {
+      showStatus({ error: e.message });
+    }
+  };
+
+  // After sign-in: read directory entry and route
+  onAuthStateChanged(auth, async (user) => {
+    if (!user) return;
+    try {
+      const email = (user.email || "").toLowerCase(); // e.g., bmiller@jta.local
+      const dirRef = doc(db, "directory", email);
+      const dirSnap = await getDoc(dirRef);
+
+      if (!dirSnap.exists()) {
+        await signOut(auth);
+        return showStatus({ error: "No assignment found for your username. Contact support." });
+      }
+
+      // Ensure a per-user profile (optional)
+      const profRef = doc(db, "profiles", user.uid);
+      const profSnap = await getDoc(profRef);
+      if (!profSnap.exists()) {
+        await setDoc(profRef, {
+          fakeEmail: email,
+          createdAt: new Date().toISOString()
+        }, { merge: true });
+      }
+
+      const { storeNumber, role } = dirSnap.data();
+      if (!storeNumber || !role) {
+        await signOut(auth);
+        return showStatus({ error: "Your directory entry is incomplete. Contact support." });
+      }
+
+      // Route to {Store XX}/{manager.html|technician.html} (relative path works on GitHub Pages)
+      const storeFolder = encodeURIComponent(storeNumber); // handles spaces in folder names
+      const rolePage = (role === "Manager") ? "manager.html" : "technician.html";
+      const dest = `${storeFolder}/${rolePage}`;
+      window.location.href = dest;
+
+    } catch (e) {
+      showStatus({ error: e.message });
+    }
+  });
+</script>
+
 </body>
 </html>
