--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="card stack hidden" id="signedInBox">
         <p>Signed in as <strong id="who"></strong></p>
         <div>
-          <button id="continueBtn">Continue to my hub</button>
+          <button id="continueBtn">Continue to my training</button>
           <button id="signOutBtn">Sign out</button>
         </div>
       </div>
