--- a/index.html
+++ b/index.html
@@ -34,14 +34,13 @@
         <pre id="status" class="hidden"></pre>
       </div>
 
-      <!-- SIGNED-IN: offer continue / sign out instead of auto-redirect -->
-      <div class="card stack hidden" id="signedInBox">
-        <p>Signed in as <strong id="who"></strong></p>
-        <div>
-          <button id="continueBtn">Continue to my training</button>
-          <button id="signOutBtn">Sign out</button>
-        </div>
-      </div>
+  <div class="card stack hidden" id="signedInBox">
+    <p>Signed in as <strong id="who"></strong></p>
+    <div class="actions">
+      <button id="continueBtn">Continue to my hub</button>
+      <button id="signOutBtn">Sign out</button>
+    </div>
+  </div>
 
       <footer>
         FAQs below. Further questions? Contact
