--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
 
   <div class="card stack hidden" id="signedInBox">
-    <p>Signed in as <strong id="who"></strong></p>
+    <p id="signedInText">Signed in as <strong id="who"></strong></p>
     <div class="actions">
       <button id="continueBtn">Continue to my hub</button>
       <button id="signOutBtn">Sign out</button>
