--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="card stack hidden" id="signedInBox">
     <p id="signedInText">Signed in as <strong id="who"></strong></p>
     <div class="actions">
-      <button id="continueBtn">Continue to my hub</button>
+      <button id="continueBtn">Continue to my training</button>
       <button id="signOutBtn">Sign out</button>
     </div>
   </div>
