--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
 
 <header>
   <img src="logo.jpg" alt="Jensen Tire & Auto Logo">
-  <!-- Your site-wide nav can have: <a href="/">Home</a> -->
+
 </header>
 
+<nav id="nav-menu">
+  <a href="../index.html">Main Dashboard</a>
+  <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
+  <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
+  <a href="https://jensentireandauto.com" target="_blank">Retail Site</a>
+</nav>
+  
 <div class="snap-container">
   <section id="onboarding">
     <div class="container">
