--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header>
   <img src="logo.jpg" alt="Jensen Tire & Auto Logo">
-
+  <div id="hamburger" onclick="toggleMenu()">☰</div>
 </header>
 
 <nav id="nav-menu">
